# smallsh

./: .gitignore  CMakeLists.txt
data/: test.sh
include/: command_list.h  core.h  custom_commands.h  hash_map.h  parsed_command.h  shell_io.h  shell_state.h  types.h  validation.h
src/: command_list.c  custom_commands.c  hash_map.c  main.c  parsed_command.c  shell_io.c  shell_state.c  validation.c
